# TechnoTrack

./: .gitignore
Akinator/: CMakeLists.txt  ex.txt  main.c  main.cpp
Akinator/lib/: CMakeLists.txt
Akinator/lib/Stack/: Stack.h
Akinator/lib/TextLib/: CMakeLists.txt  File.c  File.h  Strings.c  Strings.h  Text.c
Akinator/lib/logger/: logger.c  logger.h
Akinator/lib/tree/: CMakeLists.txt  tree.c  tree.h
Akinator/old/: File.c  Text.c  Text.h  Tree.c  Tree.h  logger.c  logger.h
Differentiator/: CMakeLists.txt  DSL.h  diff.c  diff.h  input  input1  main.c
Differentiator/dumps/: dot_test2  dot_test3  dot_test4  tex_test3  tex_test4
Differentiator/lib/: CMakeLists.txt
Differentiator/lib/Stack/: CMakeLists.txt
Differentiator/lib/TextLib/: CMakeLists.txt  File.c  File.h  Text.c  Text.h
Differentiator/lib/logger/: logger.c  logger.h
Differentiator/lib/tree/: func  tree.c  tree.h
HashTable/: CMakeLists.txt  hashtable.c  hashtable.h  main.c
HashTable/lib/: CMakeLists.txt
HashTable/lib/list/: list.c  list.h
HashTable/lib/logger/: CMakeLists.txt  TColors.h  logger.c
Lang/: CMakeLists.txt  main.c
Lang/lib/: CMakeLists.txt
Lang/lib/TextLib/: File.c  File.h  Strings.c  Text.c
Lang/lib/id_table/: CMakeLists.txt  id_table.c  id_table.h
Lang/lib/list/: CMakeLists.txt  list.c  list.h
Lang/lib/tree/: CMakeLists.txt  DSL.h  _tree.c  _tree.h  output_str  tree.c  tree.h
List/: CMakeLists.txt  list.c  list.h  main.c
List/logger/: logger.c
Onegin/: Comparisons.c  Comparisons.h  File.c  File.h  Libraries.h  Lines.c  Lines.h  Onegin.c  Sort.c  Sort.h  Strings.c  Strings.h  TColors.h  Text.c  input.txt  logger.c  logger.h  main.c
Processor/: Ass.c  CMakeLists.txt  CPUcommands.h  FText.c  Libraries.h  input.txt  output.txt  proc.c  tmp.txt
Processor/ASS/: Ass_main.c  CMakeLists.txt  assembler.c  assembler.h
Processor/CPU/: CMakeLists.txt  cpu.c  cpu.h  proc.c
Processor/lib/: CMakeLists.txt
Processor/lib/Stack/: CMakeLists.txt  Print.c  Print.h  Stack.h
Processor/lib/TextLib/: CMakeLists.txt  File.c  Strings.c  Text.c  Text.h
Processor/lib/logger/: CMakeLists.txt  TColors.h  logger.h
Processor/old/: FText.h
QuadaraticEquationSolver/: Doxyfile  EqSolver.c  EqSolver.h  Test.c  Test.h  main.c  square_eq.c
SSE/: 1-mandelbrot.cpp  2-mandelbrot.cpp  3-mandelbrot.cpp  4-mandelbrot.cpp  5-mandelbrot.cpp  7-blending.cpp
Stack/: Print.cpp  Print.hpp  Print.s  Stack.cpp  Stack.h  Stack.hpp  filesystem.c  filesystem.h  logfile.txt  logger.c  logger.h  main.c  main.cpp
Tasks/: task1.c
